implemented a variable score, one-time initial survey

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,10 @@
     <div id="score">
         Score: [Your Score Goes Here]
     </div>
+    <button id="addProductButton">+</button>
+    <div id="productList">
+        <!-- Display added products here -->
+    </div>
     <form id="surveyForm">
         <label for="prompt">Rate the following categories based on your priority when online shopping from 1 (low) to 5 (high):</label><br>
         
@@ -36,7 +40,7 @@
         <button type="submit" id="submitButton">Submit</button>
     </form>
     <div id="submittedMessage">
-        <p>Your survey has been submitted!</p>
+        <p>Submitted results:</p>
         <div id="collectedValues">
           <p>Exercise Rating: <span id="exerciseRating">[Exercise Rating Goes Here]</span></p>
           <p>Diet Rating: <span id="dietRating">[Diet Rating Goes Here]</span></p>
